# indri-git

./: CMakeLists.txt  README.md  configure  configure.ac  meson.build
buildindex/: CMakeLists.txt  IndriBuildIndex.cpp
cmake/: Findhts.cmake
contrib/antlr/: CMakeLists.txt  meson.build
contrib/lemur/: CMakeLists.txt
contrib/lemur/include/lemur/: Keyfile.hpp
contrib/xpdf/: CMakeLists.txt  meson.build
dumpindex/: CMakeLists.txt  meson.build
harvestlinks/: CMakeLists.txt  meson.build
include/indri/: CompressedCollection.hpp  CorpusStatistics.hpp  DocumentStructure.hpp  FieldExtent.hpp  FieldStatistics.hpp  HashTable.hpp  IndexEnvironment.hpp  KrovetzStemmer.hpp  ListIteratorNode.hpp  MaxNode.hpp  MemoryIndex.hpp  Parameters.hpp  ParsedDocument.hpp  QuerySpec.hpp  ReadersWritersLock.hpp  RegionAllocator.hpp  Repository.hpp  ScoredExtentAccumulator.hpp  StopperTransformation.hpp  TermScoreFunction.hpp  UnparsedDocument.hpp  atomic.hpp  greedy_vector  ref_ptr.hpp
src/: CompressedCollection.cpp  DocListMemoryBuilder.cpp  DocumentStructureHolderNode.cpp  ExtentRestrictionNode.cpp  FieldIteratorNode.cpp  IndexEnvironment.cpp  InferenceNetworkBuilder.cpp  MemoryIndex.cpp  PageRank.cpp  Repository.cpp  ShrinkageBeliefNode.cpp  TermScoreFunctionFactory.cpp  TokenizerFactory.cpp  WARCDocumentIterator.cpp
swig/: CMakeLists.txt  meson.build
swig/src/: greedy_vector.i  indri.i
swig/src/interface/: indri.i
