add_library(antlr STATIC
    include/antlr/ANTLRException.hpp
    include/antlr/ANTLRUtil.hpp
    include/antlr/AST.hpp
    include/antlr/ASTArray.hpp
    include/antlr/ASTFactory.hpp
    include/antlr/ASTNULLType.hpp
    include/antlr/ASTPair.hpp
    include/antlr/ASTRefCount.hpp
    include/antlr/BaseAST.hpp
    include/antlr/BitSet.hpp
    include/antlr/CharBuffer.hpp
    include/antlr/CharInputBuffer.hpp
    include/antlr/CharScanner.hpp
    include/antlr/CharStreamException.hpp
    include/antlr/CharStreamIOException.hpp
    include/antlr/CircularQueue.hpp
    include/antlr/CommonAST.hpp
    include/antlr/CommonASTWithHiddenTokens.hpp
    include/antlr/CommonHiddenStreamToken.hpp
    include/antlr/CommonToken.hpp
    include/antlr/config.hpp
    include/antlr/InputBuffer.hpp
    include/antlr/IOException.hpp
    include/antlr/LexerSharedInputState.hpp
    include/antlr/LLkParser.hpp
    include/antlr/MismatchedCharException.hpp
    include/antlr/MismatchedTokenException.hpp
    include/antlr/NoViableAltException.hpp
    include/antlr/NoViableAltForCharException.hpp
    include/antlr/Parser.hpp
    include/antlr/ParserSharedInputState.hpp
    include/antlr/RecognitionException.hpp
    include/antlr/RefCount.hpp
    include/antlr/SemanticException.hpp
    include/antlr/String.hpp
    include/antlr/Token.hpp
    include/antlr/TokenBuffer.hpp
    include/antlr/TokenStream.hpp
    include/antlr/TokenStreamBasicFilter.hpp
    include/antlr/TokenStreamException.hpp
    include/antlr/TokenStreamHiddenTokenFilter.hpp
    include/antlr/TokenStreamIOException.hpp
    include/antlr/TokenStreamRecognitionException.hpp
    include/antlr/TokenStreamRetryException.hpp
    include/antlr/TokenStreamSelector.hpp
    include/antlr/TreeParser.hpp
    include/antlr/TreeParserSharedInputState.hpp
    src/antlrParser.cpp
    src/ANTLRUtil.cpp
    src/ASTFactory.cpp
    src/ASTNULLType.cpp
    src/ASTRefCount.cpp
    src/BaseAST.cpp
    src/BitSet.cpp
    src/CharBuffer.cpp
    src/CharScanner.cpp
    src/CommonAST.cpp
    src/CommonASTWithHiddenTokens.cpp
    src/CommonHiddenStreamToken.cpp
    src/CommonToken.cpp
    src/InputBuffer.cpp
    src/LLkParser.cpp
    src/MismatchedCharException.cpp
    src/MismatchedTokenException.cpp
    src/NoViableAltException.cpp
    src/NoViableAltForCharException.cpp
    src/RecognitionException.cpp
    src/String.cpp
    src/Token.cpp
    src/TokenBuffer.cpp
    src/TokenStreamBasicFilter.cpp
    src/TokenStreamHiddenTokenFilter.cpp
    src/TokenStreamSelector.cpp
    src/TreeParser.cpp)