add_library(xpdf STATIC
        include/about-text.h
        include/aconf-win32.h
        include/aconf.h
        include/aconf2.h
        include/Annot.h
        include/Array.h
        include/BuiltinFont.h
        include/BuiltinFontTables.h
        include/Catalog.h
        include/CharCodeToUnicode.h
        include/CharTypes.h
        include/CMap.h
        include/CompactFontTables.h
        include/config.h
        include/Decrypt.h
        include/Dict.h
        include/Error.h
        include/ErrorCodes.h
        include/FoFiBase.h
        include/FoFiEncodings.h
        include/FoFiTrueType.h
        include/FoFiType1.h
        include/FoFiType1C.h
        include/FontEncodingTables.h
        include/Function.h
        include/gfile.h
        include/Gfx.h
        include/GfxFont.h
        include/GfxState.h
        include/GHash.h
        include/GList.h
        include/GlobalParams.h
        include/gmem.h
        include/GMutex.h
        include/GString.h
        include/gtypes.h
        include/JArithmeticDecoder.h
        include/JBIG2Stream.h
        include/JPXStream.h
        include/Lexer.h
        include/Link.h
        include/NameToCharCode.h
        include/NameToUnicodeTable.h
        include/Object.h
        include/Outline.h
        include/OutputDev.h
        include/Page.h
        include/parseargs.h
        include/Parser.h
        include/PDFDoc.h
        include/PDFDocEncoding.h
        include/PreScanOutputDev.h
        include/PSOutputDev.h
        include/PSTokenizer.h
        include/SecurityHandler.h
        include/Stream-CCITT.h
        include/Stream.h
        include/TextOutputDev.h
        include/UnicodeMap.h
        include/UnicodeMapTables.h
        include/UnicodeTypeTable.h
        include/UTF8.h
        include/XRef.h
        src/Annot.cc
        src/Array.cc
        src/BuiltinFont.cc
        src/BuiltinFontTables.cc
        src/Catalog.cc
        src/CharCodeToUnicode.cc
        src/CMap.cc
        src/Decrypt.cc
        src/Dict.cc
        src/Error.cc
        src/FoFiBase.cc
        src/FoFiEncodings.cc
        src/FoFiTrueType.cc
        src/FoFiType1.cc
        src/FoFiType1C.cc
        src/FontEncodingTables.cc
        src/Function.cc
        src/gfile.cc
        src/Gfx.cc
        src/GfxFont.cc
        src/GfxState.cc
        src/GHash.cc
        src/GList.cc
        src/GlobalParams.cc
        src/gmem.cc
        src/GString.cc
        src/JArithmeticDecoder.cc
        src/JBIG2Stream.cc
        src/JPXStream.cc
        src/Lexer.cc
        src/Link.cc
        src/NameToCharCode.cc
        src/Object.cc
        src/Outline.cc
        src/OutputDev.cc
        src/Page.cc
        src/parseargs.c
        src/PDFDoc.cc
        src/PDFDocEncoding.cc
        src/PSOutputDev.cc
        src/PSTokenizer.cc
        src/SecurityHandler.cc
        src/Stream.cc
        src/TextOutputDev.cc
        src/UnicodeMap.cc
        src/UnicodeTypeTable.cc
        src/xpdfParser.cc
        src/XRef.cc)

set_property(TARGET xpdf PROPERTY POSITION_INDEPENDENT_CODE ON)
target_include_directories(xpdf PUBLIC include)